Initial readme, updated example test html files

--- a/test/optics.html
+++ b/test/optics.html
@@ -1,5 +1,8 @@
-<html>
+<!DOCTYPE html> 
+<html lang="en">
 <head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Driving Times</title>
 <style>
 div { margin-top: 20px}
@@ -19,7 +22,6 @@ div { margin-top: 20px}
   StatHatEmbed.render({s1: '3yAb', w: size.w, h: size.h, tf:'day_compare', s2: '3a5m', title:'To/From Optics Planet'});
   StatHatEmbed.render({s1: '3yAb', w: size.w, h: size.h, tf:'day_compare', title:'From Optics Planet'});
   StatHatEmbed.render({s1: '3a5m', w: size.w, h: size.h, tf:'day_compare', title:'To Optics Planet'});
-
   //StatHatEmbed.render({s1: '3a5m', title:'To Optics Planet', w: 210, h: 90, tf: 'hour_compare ', style: 'mini'});
   </script>
 </body>
