--- a/test/shayna.html
+++ b/test/shayna.html
@@ -1,9 +1,12 @@
-<html>
+<!DOCTYPE html> 
+<html lang="en">
 <head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Driving Times</title>
-<style>
+  <style>
 div { margin-top: 20px}
-</style>
+  </style>
 </head>  
 <body>
   <h1>Commuter Driving times, including Traffic<br/>Between Shayna's Studio & Logan Square</h1>
@@ -15,15 +18,10 @@ div { margin-top: 20px}
     w: 760, // width in pixels
     h: 235 // height in pixels
   }
-  //StatHatEmbed.render({s1: 'XXXX', w: 500, h: 200, tf: 'month', style: 'fill', title: 'Load Average'});
   // https://www.stathat.com/docs/embed_api 
   StatHatEmbed.render({s1: 'LzuM', w: size.w, h: size.h, tf:'day_compare', s2: 'H2jg', title:'To/From Shayna Studio'});
   StatHatEmbed.render({s1: 'H2jg', w: size.w, h: size.h, tf:'day_compare', title:'To Shayna Studio'});
   StatHatEmbed.render({s1: 'LzuM', w: size.w, h: size.h, tf:'day_compare', title:'From Shayna Studio'});
-  //StatHatEmbed.render({s1: '3yAb', w: size.w, h: size.h, tf:'day_compare', title:'From Optics Planet'});
-  //StatHatEmbed.render({s1: '3a5m', w: size.w, h: size.h, tf:'day_compare', title:'To Optics Planet'});
-
-  //StatHatEmbed.render({s1: '3a5m', title:'To Optics Planet', w: 210, h: 90, tf: 'hour_compare ', style: 'mini'});
   </script>
 </body>
 </html>
