--- a/test/optics.html
+++ b/test/optics.html
@@ -3,13 +3,17 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Driving Times</title>
+  <title>Driving Times to Optics Planet</title>
 <style>
 div { margin-top: 20px}
 </style>
 </head>  
 <body>
   <h1>Commuter Driving times, including Traffic<br/>Between Optics Planet & Logan Square</h1>
+  <p>Based on <a href='https://github.com/chadn/driving_time'>driving_time code</a> and <a
+     href="https://maps.google.com/maps?hl=en&saddr=2733+N+Troy+St,+Chicago,+IL&daddr=3150+Commercial+Ave,+Northbrook,+IL+60608,+USA"
+    >Google Maps</a> 
+  </p>
 
   <script src="http://www.stathat.com/javascripts/embed.js"></script>
 
