--- a/test/ord.html
+++ b/test/ord.html
@@ -10,7 +10,10 @@ div { margin-top: 20px}
 </head>  
 <body>
   <h1>Commuter Driving times, including Traffic<br/>Between O'Hare Airport (ORD) & Chicago Bean (downtown)</h1>
-
+  <p>Based on <a href='https://github.com/chadn/driving_time'>driving_time code</a> and <a
+     href="https://maps.google.com/maps?hl=en&saddr=Chicago+O'Hare+International+Airport,+10000+West+O'Hare+Avenue,+Chicago,+IL&daddr=Chicago+Bean,+55+North+Michigan+Avenue,+Chicago,+IL+60601"
+    >Google Maps</a> 
+  </p>
   <script src="http://www.stathat.com/javascripts/embed.js"></script>
 
   <script>
@@ -23,6 +26,7 @@ div { margin-top: 20px}
   StatHatEmbed.render({s1: 'X2hz', w: size.w, h: size.h, tf:'day_compare', title:"To O'Hare From Chicago Bean"});
   StatHatEmbed.render({s1: 'ZcmX', w: size.w, h: size.h, tf:'day_compare', title:"From O'Hare to Chicago Bean"});
   </script>
+  <h3>BLUE: To O'Hare;  ORANGE: From O'Hare</h3>
 </body>
 </html>
 
