tweak test/ord-bean.html

--- a/test/ord-bean.html
+++ b/test/ord-bean.html
@@ -62,10 +62,10 @@ $(function() {
 
     console.log('done getJSON:', a1, a2);
     plotChart([{
-      name : 'To Bean',
+      name : 'From OHare',
       data : buildSeries(a1[0])
     }, {
-      name : 'From Bean',
+      name : 'To OHare',
       data : buildSeries(a2[0])
     }])
   });
