added google analytics to test/*.html

--- a/test/ord.html
+++ b/test/ord.html
@@ -25,6 +25,15 @@ div { margin-top: 20px}
   StatHatEmbed.render({s1: 'X2hz', w: size.w, h: size.h, tf:'day_compare', s2: 'ZcmX', title:'To/From Chicago Bean'});
   StatHatEmbed.render({s1: 'X2hz', w: size.w, h: size.h, tf:'day_compare', title:"To O'Hare From Chicago Bean"});
   StatHatEmbed.render({s1: 'ZcmX', w: size.w, h: size.h, tf:'day_compare', title:"From O'Hare to Chicago Bean"});
+  
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-39932934-1', 'github.io');
+  ga('send', 'pageview');
+  
   </script>
   <h3>BLUE: To O'Hare;  ORANGE: From O'Hare</h3>
 </body>
