--- a/test/shayna.html
+++ b/test/shayna.html
@@ -26,6 +26,15 @@ div { margin-top: 20px}
   StatHatEmbed.render({s1: 'LzuM', w: size.w, h: size.h, tf:'day_compare', s2: 'H2jg', title:'To/From Shayna Studio'});
   StatHatEmbed.render({s1: 'H2jg', w: size.w, h: size.h, tf:'day_compare', title:'To Shayna Studio'});
   StatHatEmbed.render({s1: 'LzuM', w: size.w, h: size.h, tf:'day_compare', title:'From Shayna Studio'});
+  
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-39932934-1', 'github.io');
+  ga('send', 'pageview');
+
   </script>
 </body>
 </html>
