--- a/test/optics.html
+++ b/test/optics.html
@@ -27,6 +27,15 @@ div { margin-top: 20px}
   StatHatEmbed.render({s1: '3yAb', w: size.w, h: size.h, tf:'day_compare', title:'From Optics Planet'});
   StatHatEmbed.render({s1: '3a5m', w: size.w, h: size.h, tf:'day_compare', title:'To Optics Planet'});
   //StatHatEmbed.render({s1: '3a5m', title:'To Optics Planet', w: 210, h: 90, tf: 'hour_compare ', style: 'mini'});
+  
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-39932934-1', 'github.io');
+  ga('send', 'pageview');
+  
   </script>
 </body>
 </html>
