--- a/test/ord-bean.html
+++ b/test/ord-bean.html
@@ -77,6 +77,15 @@ $(function() {
 http://api.highcharts.com/highstock#Series.update()
 http://jsfiddle.net/gh/get/jquery/1.7.2/highslide-software/highcharts.com/tree/master/samples/highcharts/members/series-update/
 /*/
+
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-39932934-1', 'github.io');
+  ga('send', 'pageview');
+
   </script>
   
 </body>
