--- a/index.html
+++ b/index.html
@@ -7,12 +7,15 @@
 </head>  
 <body>
   <ul>
-  View graphs of driving times, including Traffic, of
-  <li><a href='test/ord.html'>Between O'Hare and Chicago Bean (downtown)</a></li>
-  <li><a href='test/ord-bean.html'>Between O'Hare and Chicago Bean (downtown) beta</a></li>
-  <li><a href='test/shayna.html'>Between Logan Square & Shayna's Studio (Pilsen)</a></li>
-  <li><a href='test/optics.html'>Between Logan Square & Optics Planet (Northbrook IL)</a></li>
-  <li><a href='test/weather.html'>Weather stats (beta)</a></li>
+  View graphs of driving times, including Traffic, 
+    <li><a href='test/ord.html'>Between O'Hare and Chicago Bean (downtown)</a></li>
+    <li><a href='test/ord-bean.html'>Between O'Hare and Chicago Bean (downtown) beta</a></li>
+    <li><a href='test/shayna.html'>Between Logan Square & Shayna's Studio (Pilsen)</a></li>
+    <li><a href='test/optics.html'>Between Logan Square & Optics Planet (Northbrook IL)</a></li>
+  </ul>
+  <ul> Other graphs
+    <li><a href='test/weather.html'>Weather stats (beta)</a></li>
+  </ul>
 
   <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
