change name from driving_time to heroku-worker, since in addition to driving_time there is also a weather forecast worker script

--- a/test/ord.html
+++ b/test/ord.html
@@ -10,7 +10,7 @@ div { margin-top: 20px}
 </head>  
 <body>
   <h1>Commuter Driving times, including Traffic<br/>Between O'Hare Airport (ORD) & Chicago Bean (downtown)</h1>
-  <p>Based on <a href='https://github.com/chadn/driving_time'>driving_time code</a> and <a
+  <p>Based on <a href='https://github.com/chadn/heroku-worker'>heroku-worker code</a> and <a
      href="https://maps.google.com/maps?hl=en&saddr=Chicago+O'Hare+International+Airport,+10000+West+O'Hare+Avenue,+Chicago,+IL&daddr=Chicago+Bean,+55+North+Michigan+Avenue,+Chicago,+IL+60601"
     >Google Maps</a> 
   </p>
