--- a/test/optics.html
+++ b/test/optics.html
@@ -10,7 +10,7 @@ div { margin-top: 20px}
 </head>  
 <body>
   <h1>Commuter Driving times, including Traffic<br/>Between Optics Planet & Logan Square</h1>
-  <p>Based on <a href='https://github.com/chadn/driving_time'>driving_time code</a> and <a
+  <p>Based on <a href='https://github.com/chadn/heroku-worker'>heroku-worker code</a> and <a
      href="https://maps.google.com/maps?hl=en&saddr=2733+N+Troy+St,+Chicago,+IL&daddr=3150+Commercial+Ave,+Northbrook,+IL+60608,+USA"
     >Google Maps</a> 
   </p>
