--- a/test/optics.html
+++ b/test/optics.html
@@ -4,9 +4,13 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Driving Times to Optics Planet</title>
-<style>
-div { margin-top: 20px}
-</style>
+	<style>
+	div { margin-top: 20px}
+	</style>
+	<script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
+	<script src="http://code.jquery.com/jquery-migrate-1.1.1.min.js"></script>
+	<script src="http://code.highcharts.com/stock/highstock.js"></script>
+	<script src="http://code.highcharts.com/stock/modules/exporting.js"></script>
 </head>  
 <body>
   <h1>Commuter Driving times, including Traffic<br/>Between Optics Planet & Logan Square</h1>
@@ -27,7 +31,63 @@ div { margin-top: 20px}
   StatHatEmbed.render({s1: '3yAb', w: size.w, h: size.h, tf:'day_compare', title:'From Optics Planet'});
   StatHatEmbed.render({s1: '3a5m', w: size.w, h: size.h, tf:'day_compare', title:'To Optics Planet'});
   //StatHatEmbed.render({s1: '3a5m', title:'To Optics Planet', w: 210, h: 90, tf: 'hour_compare ', style: 'mini'});
-  
+  </script>
+
+
+  <div id="container" style="height: 500px; min-width: 500px"></div>
+  Above chart made with <a href='http://www.highcharts.com/products/highstock'>highstock.js</a>
+
+  <script>
+  // highcharts graph
+$(function() {
+
+  // Create the chart 
+  function plotChart(series) {
+    $('#container').highcharts('StockChart', {
+      rangeSelector : {
+        selected : 1
+      },
+      title : {
+        text : 'Driving Time, in mins, Between Optics Planet and Logan Sq'
+      },
+      series : series
+    });
+  }
+
+  function buildSeries(rawData) {             
+    // highcharts wants series data like this: [[1144627200000,32.50], [1144627500000,35.50]]
+    var data = [];
+    var epochSecs;
+    for (var ii=0; ii < rawData.length; ii++) {
+      epochSecs = Date.parse(rawData[ii].createdAt);
+      data.push([epochSecs, rawData[ii].mins]);
+    }
+    return data;
+  }
+
+  $.when(
+    $.getJSON('http://api-sails.herokuapp.com/driving_time/?t=From-Optics-Planet'),
+    $.getJSON('http://api-sails.herokuapp.com/driving_time/?t=To-Optics-Planet')
+
+  ).done(function(a1,  a2){
+
+    console.log('done getJSON:', a1, a2);
+    plotChart([{
+      name : 'From Optics Planet',
+      data : buildSeries(a1[0])
+    }, {
+      name : 'To Optics Planet',
+      data : buildSeries(a2[0])
+    }])
+  });
+
+});
+
+
+
+
+
+  // GOOGLE ANALYTICS
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
