Don't use UTC for highcharts, use local browser time (chicago time)

--- a/test/optics.html
+++ b/test/optics.html
@@ -41,6 +41,12 @@
   // highcharts graph
 $(function() {
 
+  Highcharts.setOptions({
+    global: {
+      useUTC: false
+    }
+  });
+
   // Create the chart 
   function plotChart(series) {
     $('#container').highcharts('StockChart', {
